vpc.tf
resource "aws_vpc" "vpc_fiap" {
  cidr_block           = var.cidr_vpc
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Project = "Officyna"
    Name    = "officyna-vpc"
  }
}
